# freqdash

./: .env  Cargo.toml  README.md  README_ADWAITA.md  buid.sh
doc/: ui.txt
src/: backtest.rs  config.rs  db.rs  gui.rs  lib.rs  utils.rs
src/backtest/: logic.rs  logic_optimized.rs  model.rs  sql.rs
src/gui/: app.rs  events.rs  init.rs  mod.rs  state.rs  ui.rs  utils.rs
src/gui/events/: export.rs  filters.rs  handlers.rs  mod.rs  query.rs
src/gui/ui/: backtest_page.rs  backtest_page.ui  left_panel.rs  left_panel.ui  mod.rs  right_panel.rs  right_panel.ui  status_bar.rs  table_view.rs  toolbar.rs  toolbar.ui  window.rs  window.ui
src/gui_adw/: app.rs  init.rs  mod.rs  state.rs  utils.rs
src/gui_adw/events/: export.rs  filters.rs  handlers.rs  mod.rs  query.rs
src/gui_adw/ui/: left_panel.rs  mod.rs  right_panel.rs  table_view.rs  toolbar.rs
