[package]
name = "freqdash"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

# Declaración de binarios
[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[dependencies]
# Comunes
deadpool-postgres = { version = "0.12", features = ["rt_tokio_1"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
once_cell = "1.18"
config = "0.14"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.1"

# Opcionales
clap = { version = "4.5", features = ["derive"], optional = true }
gtk4 = { version = "0.10.0", optional = true }
glib = { version = "*", optional = true }
#glib = { version = "0.21.1", optional = true}
libadwaita = { version = "0.8", features = ["v1_7"], optional = true }

[features]
default = []
cli = ["dep:clap"]
gui = ["dep:libadwaita", "dep:gtk4", "dep:glib"]